--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<h1>hello, world</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>A Whale of a greaeting</title>
+		
+		
+	</head>
+	
+	<body>
 
+
+<h1>hello, world</h1>
+<p>call me Ishmael</P>
+
+
+	</body>
+	
+	
+</html>
